# tjbots

./: .dockerignore  .env.dev  .gitignore  .nojekyll  .pre-commit-config.yaml  00-development.html  01-chatbot.html  Dockerfile  Makefile  README.md  index.html  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.devcontainer/: devcontainer.env  devcontainer.json
.github/: copilot-instructions.md
.github/actions/docs-setup/: action.yml
.github/actions/setup-docker/: action.yml
.github/actions/setup-docs/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/tjbots-build-setup/: action.yml
.github/actions/tjbots-python-setup/: action.yml
.github/actions/tjbots-setup/: action.yml
.github/instructions/: app.instructions.md
.github/workflows/: app-publish.yml  copilot-setup-steps.yml  devcontainer-prebuild.yml  docs-publish.yml  docs-test.yml  notes-publish.yml  tjbots-publish.yml  tjbots-test.yml
app/: Dockerfile  app.py  custom.css  requirements.txt  shiny-server.conf
app/www/: custom.css  manifest.json
chatbot/: Dockerfile  app.py  dev.env
dev/: pre-commit.html
developer/: index.html  pre-commit.html
development/: 00-general.html  01-chatbot.html  02-improving_reconnection.html
development/01-general/: 01-devcontainer.html
development/02-bots/: 01-general.html  02-pwa.html  03-deployment.html  04-reconnection.html
docs/: .gitignore  _quarto.yml  index.qmd
docs/developer/: index.qmd  pre-commit.qmd
docs/development/02-bots/: 01-general.qmd  02-pwa.qmd
docs/journal/: index.qmd
docs/journal/01-development/: 01-devcontainer.qmd  03-testing.qmd  04-vibe_coding.qmd  05-github_copilot_agents.md  06-cicd.qmd
docs/journal/02-bots_playground/: 02-deployment.qmd  03-reconnection.qmd  04-model_selection.qmd  index.qmd
docs/notes/01-development/: 03-testing.qmd  (+4 more)
docs/scenarios/: 01-grocerybot.qmd
docs/scripts/: copy_readme.py
env/: dev.env  sandbox.env  staging.env  test.env
envs/: production.env
journal/: index.html
journal/01-development/: 01-devcontainer.html  02-quartodoc.html  03-testing.html  04-vibe_coding.html  05-github_copilot_agents.html  06-cicd.html  index.html
journal/02-bots_playground/: 01-pwa.html  02-deployment.html  03-reconnection.html  04-model_selection.html  index.html
notes/: .gitignore  00-development.qmd  01-chatbot.qmd  _quarto.yml  index.qmd
notes/01-development/: 01-devcontainer.html  02-quartodoc.html  03-testing.html  04-vibe_coding.html  index.html
notes/02-bots/: 01-general.html  01-pwa.html  02-deployment.html  02-pwa.html  03-deployment.html  03-reconnection.html  04-reconnection.html  index.html
notes/development/: 01-chatbot.qmd
notes/scenarios/: 01-grocerybot.qmd
notes/scripts/: copy_readme.py
reference/: app.html  app.modules.pwa.html  app.modules.reconnect.html  chat.html  index.html  pwa.html  reconnect.html  sidebar.html
scenarios/: 01-grocerybot.html
site_libs/bootstrap/: bootstrap-dc0cbde83a772c20102d5eb980886ab2.min.css
src/tjbots/: config.py
tests/: conftest.py  docker-compose.yml  test_config.py
tests/app/: __init__.py  test_app.py  test_chat_history.py
tests/tjbots/: __init__.py  conftest.py  test_utils.py
(+16 files in other folders)
