[project]
name = "tjbots"
version = "0.1.0"
description = "TJ's adventures with LLMs"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/tjpalanca/tjbots"
Repository = "https://github.com/tjpalanca/tjbots"
Issues = "https://github.com/tjpalanca/tjbots/issues"

[tool.uv]
default-groups=["app", "dev"]

[dependency-groups]
app = [
    "anthropic>=0.58.2",
    "chatlas>=0.9.1",
    "google-genai>=1.26.0",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "shiny>=1.4.0",
]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "quartodoc>=0.11.1",
]
