[project]
name = "tjbots"
version = "0.1.0"
description = "TJ's adventures with LLMs"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/tjpalanca/tjbots"
Repository = "https://github.com/tjpalanca/tjbots"
Issues = "https://github.com/tjpalanca/tjbots/issues"

[tool.uv]
default-groups=["app", "dev"]

[dependency-groups]
app = [
    "anthropic>=0.58.2",
    "chatlas>=0.9.1",
    "google-genai>=1.26.0",
    "openai>=1.97.1",
    "shiny>=1.4.0",
]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "pre-commit>=4.0.1",
    "pytest>=8.4.1",
    "pytest-docker>=3.2.3",
    "pytest-playwright>=0.7.0",
    "quartodoc>=0.11.1",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
